Fixing some colors, adding texts inside notepad and adding z-index for raids

--- a/styles/windows.css
+++ b/styles/windows.css
@@ -1,47 +1,46 @@
 #page {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(11, 1fr) 0.75fr;
+  display: grid;
+  height: 100vh;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(11, 1fr) 0.75fr;
 }
 
 #terminal {
-    background-color: lightcoral;
-    grid-area: 2 / 2 / 10 / 9;
-    position: relative;
-    color: #C0C4C8;
+  grid-area: 2 / 2 / 10 / 9;
+  position: relative;
+  color: #c0c4c8;
 }
 
 #terminal img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #terminal-text {
-    position: absolute;
-    top: 125px;
-    left: 25px;
-    font-size: 20px;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 125px;
+  left: 25px;
+  font-size: 20px;
+  width: 100%;
+  height: 100%;
 }
 
 #commands-input {
-    display: flex;
+  display: flex;
 }
 
 #commands-input textarea {
-    margin: 17px 0px 0px 20px;
-    background-color: #030303;
-    color: #C0C4C8;
-    border: none;
-    font-size: 20px;
-    font-family: Tiny5;
-    resize: none;
-    width: 85%;
-    height: 400px;
-    max-width: 1000px;
-    max-height: 440px;
+  margin: 17px 0px 0px 20px;
+  background-color: #030303;
+  color: #c0c4c8;
+  border: none;
+  font-size: 20px;
+  font-family: Tiny5;
+  resize: none;
+  width: 85%;
+  height: 400px;
+  max-width: 1000px;
+  max-height: 440px;
 }
 
 #commands-input textarea:focus {
@@ -49,49 +48,56 @@
 }
 
 #microsoft-copyright {
-    margin: -25px 0px 0px 30px;
+  margin: -25px 0px 0px 30px;
 }
 
 #notepad {
-    z-index: 1;
-    background-color: lightblue;
-    grid-area: 6 / 7 / 11 / 12;
+  position: relative;
+  z-index: 1;
+  grid-area: 6 / 7 / 11 / 12;
 }
 
 #notepad img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+#notepad p {
+  position: absolute;
+  font-size: 20px;
+  top: 60px;
+  left: 25px;
 }
 
 #taskbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #C0C0C0;
-    grid-area: 12 / 1 / 13 / 13;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #c0c0c0;
+  grid-area: 12 / 1 / 13 / 13;
 }
 
 #taskbar img,
 #taskbar button {
-    border: none;
-    background-color: transparent;
-    width: 100px;
-    margin-left: 5px;
-    font-family: Tiny5;
-    font-size: 20px;
+  border: none;
+  background-color: transparent;
+  width: 100px;
+  margin-left: 5px;
+  font-family: Tiny5;
+  font-size: 20px;
 }
 
 #time {
-    padding: 10px;
-    border: 2px solid black;
-    border-top-color: #868686;
-    border-left-color: #868686;
-    border-bottom-color: white;
-    border-right-color: white;
-    margin-right: 5px;
+  padding: 10px;
+  border: 2px solid black;
+  border-top-color: #868686;
+  border-left-color: #868686;
+  border-bottom-color: white;
+  border-right-color: white;
+  margin-right: 5px;
 }
 
 #raids {
-    background-color: lightblue;
-    grid-area: 1 / 10 / 7 / 13;
+  grid-area: 1 / 10 / 7 / 13;
+  z-index: 1;
 }
